--- a/pages/usuario.html
+++ b/pages/usuario.html
@@ -218,9 +218,9 @@
                                                                          
                                       <div class="form-group col-sm-2">                                                                                 
                                         <select class="form-control">
-                                          <option>Código</option>
                                           <option>Nome</option>
-                                          <option>Laboratório</option>                                            
+                                          <option>Usuário</option>
+                                          <option>Perfil</option>                                            
                                         </select>                                        
                                       </div>
 
@@ -236,25 +236,22 @@
                                     <br>                                    
                                     <!--tabelas-->
                                     <div class="table-responsive col-xs-12 col-sm-12 col-md-12">
-                                      <label>Selecione o medicamento para editar:</label>
+                                      <label>Selecione o usuário para editar:</label>
                                       <table class="table table-bordered table-striped">
                                           <thead>
                                             <tr>
                                               <th>
-                                                Código
+                                                Usuário
                                               </th>
                                               <th>
                                                 <small>Nome</small>
                                               </th>
                                               <th>
-                                                <small>Laboratório</small>
+                                                <small>Perfil</small>
                                               </th>
                                               <th>
-                                                <small>Tarja</small>
-                                              </th>
-                                              <th>
-                                                <small>Descrição</small>
-                                              </th>
+                                                <small>E-mail</small>
+                                              </th>                                              
                                             </tr>
                                           </thead>
                                           <tbody>
@@ -263,18 +260,9 @@
                                                 <td class="text-muted"></td>
                                                 <td class="text-muted"></td>
                                                 <td class="text-muted"></td>
-                                                <td class="text-muted"></td>
                                             </tr>
                                             <tr>
                                                 <th class="text-muted"></th>
-                                                <td class="text-muted"></td>
-                                                <td class="text-muted"></td>
-                                                <td class="text-muted"></td>
-                                                <td class="text-muted"></td>
-                                            </tr>
-                                            <tr>
-                                                <th class="text-muted"></th>
-                                                <td class="text-muted"></td>
                                                 <td class="text-muted"></td>
                                                 <td class="text-muted"></td>
                                                 <td class="text-muted"></td>
@@ -284,76 +272,49 @@
                                                 <td class="text-muted"></td>
                                                 <td class="text-muted"></td>
                                                 <td class="text-muted"></td>
-                                                <td class="text-muted"></td>
                                             </tr>
-                                            <tr>
-                                                <th class="text-muted"></th>
-                                                <td class="text-muted"></td>
-                                                <td class="text-muted"></td>
-                                                <td class="text-muted"></td>
-                                                <td class="text-muted"></td>
-                                            </tr>
-                                            <tr>
-                                                <th class="text-muted"></th>
-                                                <td class="text-muted"></td>
-                                                <td class="text-muted"></td>
-                                                <td class="text-muted"></td>
-                                                <td class="text-muted"></td>
-                                            </tr>                                              
+                                            
                                           </tbody>
                                       </table>
                                     </div> 
 
-                                    <form role="form">
-                                      <div class="form-group col-sm-2">                                      
-                                        <label>Código:</label>
-                                        <input name="codigo" type="text" class="form-control" placeholder="Código">
-                                      </div>
+                                    <form role="form">                                                                    
 
-                                      <div class="form-group col-sm-2">
-                                        <label>Data de Cadastro:</label>
-                                        <input name="Data de Cadastro" type="text" class="form-control" placeholder="Data">
-                                      </div>
+                                        <div class="form-group col-sm-7">
+                                          <label>Nome:</label>
+                                          <input name="nome" type="text" class="form-control" placeholder="Nome Completo">
+                                        </div>
 
-                                      <div class="form-group col-sm-8">
-                                        <label>Nome:</label>
-                                        <input name="nome" type="text" class="form-control" placeholder="Nome do Medicamento">
-                                      </div>
+                                        <div class="form-group col-sm-5">
+                                          <label>Usuário:</label>
+                                          <input name="nome" type="text" class="form-control" placeholder="Usuário">
+                                        </div>
 
-                                      <div class="form-group col-sm-12">
-                                        <label>Descrição:</label>
-                                        <textarea class="form-control" rows="3"></textarea>
-                                      </div>
+                                        <div class="form-group col-sm-6">
+                                          <label>E-mail:</label>
+                                          <input name="" type="text" class="form-control" placeholder="E-mail">
+                                        </div>
 
-                                      <div class="form-group col-sm-6">
-                                        <label>Princípio Ativo:</label>
-                                        <input name="" type="text" class="form-control" placeholder="Princípio atívo da medicação">
-                                      </div>
+                                        <div class="form-group col-sm-6">
+                                          <label>Perfil:</label>
+                                          <select name="" class="form-control mr-sm-2">
+                                            <option>Médico</option>
+                                            <option>Enfermeiro</option>
+                                            <option>Téc. Enfermagem</option>
+                                            <option>Administrador</option>                                        
+                                          </select>
+                                        </div>                                    
 
-                                      <div class="form-group col-sm-6">
-                                        <label>Laboratório: </label>
-                                        <input name="" type="text" class="form-control" placeholder="Laboratório">
-                                      </div>
+                                        <div class="form-group col-sm-6">
+                                          <label>Senha:</label>
+                                          <input name="" type="text" class="form-control" placeholder="Senha">
+                                        </div>
 
-                                      <div class="form-group col-sm-6">
-                                        <label>Tarja:</label>
-                                        <select name="" class="form-control mr-sm-2">
-                                          <option>Vermelha (Com retenção da Receita)</option>
-                                          <option>Vermelha (Sem retenção da Receita)</option>
-                                          <option>Preta</option>
-                                          <option>Amarela</option>
-                                          <option>Sem Tarja</option>
-                                        </select>
-                                      </div>
-
-                                      <div class="form-group col-sm-6">
-                                        <label>Uso Contínuo:</label>
-                                        <select name="" class="form-control mr-sm-6">
-                                          <option>Sim</option>
-                                          <option>Não</option>
-                                        </select>
-                                      </div>
-                                  </form>
+                                        <div class="form-group col-sm-6">
+                                          <label>Confirmar Senha: </label>
+                                          <input name="" type="text" class="form-control" placeholder="Confirmar Senha">
+                                        </div>
+                                    </form>
 
                                   <br>
 
