--- a/pages/enfermeiro.html
+++ b/pages/enfermeiro.html
@@ -152,42 +152,42 @@
                     <div class="panel panel-default">
                       <div class="panel-body">
                         <div class="row">
-                            <form role="form">
+                            <form action="valida.php" method="post" role="form">
                               <div class="form-group col-md-6">
-                                <label>* COREN</label>
-                                <input name="" type="text" class="form-control" placeholder="Informe o número do COREN">
+                                <label for="coren">* COREN</label>
+                                <input name="" type="number" class="form-control" placeholder="Informe o número do COREN" required>
                               </div>
 
                               <div class="form-group col-md-12">
-                                <label>* Nome</label>
-                    	          <input name="nome" type="text" class="form-control" placeholder="Digite seu nome">
+                                <label for="nome">* Nome</label>
+                    	          <input name="nome" type="text" class="form-control" placeholder="Digite seu nome" required>
                     	        </div>
 
                               <div class="form-group col-sm-12">
-                    	           <label>* E-mail</label>
-                    	           <input name="email" type="text" class="form-control" placeholder="aaa@gmail.com">
+                    	           <label for="email">* E-mail</label>
+                    	           <input name="email" type="email" class="form-control" placeholder="aaa@gmail.com">
                     					</div>
 
                     					<div class="form-group col-sm-6">
-                                <label>Telefone</label>
-                                <input name="" type="text" class="form-control" placeholder="(21) 3333-4444" id="telefone">
+                                <label for="telFixo">Telefone fixo</label>
+                                <input name="" type="number" class="form-control" placeholder="(21) 3333-4444" id="telefone">
                     	        </div>
 
                               <div class="form-group col-sm-6">
-                                <label>Celular</label>
-                                <input name="" type="text" class="form-control" placeholder="(21) 99222-3344" id="celular">
+                                <label for="celular">Celular</label>
+                                <input name="" type="number" class="form-control" placeholder="(21) 99222-3344" id="celular">
                     	        </div>
 
                     					<div class="form-group col-sm-6">
-                                <label>Data de Nascimento</label>
-                                <input name="" type="text" class="form-control" placeholder="dd/mm/aaaa" id="data">
+                                <label for="dataNasc">Data de Nascimento</label>
+                                <input name="" type="date" class="form-control" placeholder="dd/mm/aaaa" id="data" required>
                     					</div>
 
                     	        <br/>
 
                               <div class="form-group col-sm-4">
-                                <label>Sexo</label>
-                                  <select class="form-control mr-sm-2">
+                                <label for="sexo">Sexo</label>
+                                  <select class="form-control mr-sm-2" required>
                                     <option>Selecione</option>
                                     <option>Masculino</option>
                                     <option>Feminino</option>
@@ -195,40 +195,40 @@
                               </div>
 
                     					<div class="form-group col-sm-12">
-                                <label>CEP</label>
-                                <input name="" type="text" class="form-control" placeholder="Informe o CEP" id="cep">
+                                <label for="cep">CEP</label>
+                                <input name="cep" id="cep" type="number" class="form-control" placeholder="Informe o CEP" id="cep" required>
                     					</div>
 
                     					<div class="form-group col-sm-6">
-                                <label>Endereço</label>
-                                <input name="" type="text" placeholder="Infome o endereço" class="form-control">
+                                <label for="endereco">Endereço</label>
+                                <input name="endereco" id="endereco" type="text" placeholder="Infome o endereço" class="form-control" required>
                               </div>
 
                               <div class="form-group col-sm-4">
-                                <label>Número</label>
-                                <input name="" type="text" placeholder="Número" class="form-control" >
+                                <label for="endNumero">Número</label>
+                                <input name="endNumero" id="endNumero" type="number" placeholder="Número" class="form-control" required>
                               </div>
 
                     					<div class="form-group col-sm-12">
-                                <label>Complemento</label>
-                                <input name="" type="text" placeholder="Complemento" class="form-control">
+                                <label for="complemento">Complemento</label>
+                                <input name="complemento" id="complemento" type="text" placeholder="Complemento" class="form-control" required>
                               </div>
 
                     					<div class="form-group col-sm-6">
-                                <label>Bairro</label>
-                                <input name="" type="text" placeholder="Informe o bairro" class="form-control">
+                                <label for="bairro">Bairro</label>
+                                <input name="bairro" id="bairro" type="text" placeholder="Informe o bairro" class="form-control" required>
                               </div>
 
                     	        <div class="form-group col-sm-6">
-                                <label>Cidade</label>
-                                <input name="" type="text" placeholder="Informe a cidade" class="form-control">
+                                <label for="cidade">Cidade</label>
+                                <input name="cidade" id="cidade" type="text" placeholder="Informe a cidade" class="form-control" required>
                     					</div>
 
                     					<br/>
 
                     					<div class="form-group col-sm-6">
-                                <label>Estado</label>
-                                  <select name="" class="form-control mr-sm-2">
+                                <label for="estado">Estado</label>
+                                  <select name="estado" id="estado" class="form-control mr-sm-2" required>
               	                    <option>Selecione o estado</option>
               	                    <option value="AC">Acre</option>
               	                    <option value="AL">Alagoas</option>
