--- a/pages/maqueiro.html
+++ b/pages/maqueiro.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
 
@@ -159,33 +159,33 @@
                                           <form role="form">
 
                                             <div class="form-group col-sm-7">
-                                              <label>* Nome:</label>
-                                              <input name="nome" type="text" class="form-control" placeholder="Digite seu nome">
+                                              <label>Nome:</label>
+                                              <input name="nome" type="text" class="form-control" placeholder="Digite seu nome" pattern="[a-zA-Z\s]+$" required autofocus >
                                             </div>
 
                                             <div class="form-group col-sm-5">
-                                              <label>* E-mail:</label>
-                          		                <input name="email" type="text" class="form-control" placeholder="Digite seu e-mail">
+                                              <label>E-mail:</label>
+                          		                <input name="email" type="text" class="form-control" placeholder="Digite seu e-mail" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
                                             </div>
 
                                             <div class="form-group col-sm-4">
                                               <label>Telefone:</label>
-                                              <input name="" type="text" class="form-control" placeholder="Digite seu telefone" id="telefone">
+                                              <input name="" type="tel" class="form-control" placeholder="Digite seu telefone" id="telefone" maxlength="15" pattern="\([0-9]{2}\) [0-9]{4,6}-[0-9]{3,4}$">
                                             </div>
 
                                             <div class="form-group col-sm-4">
                                               <label>Celular:</label>
-                          		                <input name="" type="text" class="form-control" placeholder="Digite seu número de celular" id="celular">
+                          		                <input name="" type="tel" class="form-control" placeholder="Digite seu número de celular" id="celular">
                                             </div>
 
                                             <div class="form-group col-sm-4">
                                               <label>Data de Nascimento:</label>
-                          		                <input name="" type="text" class="form-control" placeholder="Informe a data de nascimento" id="data">
+                          		                <input name="" type="data" class="form-control" placeholder="Informe a data de nascimento" id="data">
                                             </div>
 
                                             <div class="form-group col-sm-3">
                                               <label>CEP:</label>
-                                              <input name="" type="text" class="form-control" placeholder="Informe o CEP" id="cep">
+                                              <input name="" type="text" class="form-control" placeholder="Informe o CEP" id="cep" pattern= "\d{5}-?\d{3}">
                                             </div>
 
                                             <div class="form-group col-sm-9">
