--- a/pages/usuario.html
+++ b/pages/usuario.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
 
@@ -160,22 +160,22 @@
 
                                         <div class="form-group col-sm-7">
                                           <label>Nome:</label>
-                                          <input name="nome" type="text" class="form-control" placeholder="Nome Completo">
+                                          <input name="nome" type="text" class="form-control" placeholder="Nome Completo" required autofocus>
                                         </div>
 
                                         <div class="form-group col-sm-5">
                                           <label>Usuário:</label>
-                                          <input name="nome" type="text" class="form-control" placeholder="Usuário">
+                                          <input name="nome" type="text" class="form-control" placeholder="Usuário" required="required">
                                         </div>
 
                                         <div class="form-group col-sm-6">
                                           <label>E-mail:</label>
-                                          <input name="" type="text" class="form-control" placeholder="E-mail">
+                                          <input name="" type="email" class="form-control" placeholder="E-mail" required="required">
                                         </div>
 
                                         <div class="form-group col-sm-6">
                                           <label>Perfil:</label>
-                                          <select name="" class="form-control mr-sm-2">
+                                          <select name="perfil" class="form-control mr-sm-2" required="required">
                                             <option>Médico</option>
                                             <option>Enfermeiro</option>
                                             <option>Téc. Enfermagem</option>
@@ -183,14 +183,14 @@
                                           </select>
                                         </div>                                    
 
-                                        <div class="form-group col-sm-6">
+                                        <div class="form-group col-sm-6" required="required">
                                           <label>Senha:</label>
-                                          <input name="" type="text" class="form-control" placeholder="Senha">
+                                          <input name="" type="password" class="form-control" placeholder="Senha" pattern=".{8,}" title="No mínimo 8 caracteres">
                                         </div>
 
-                                        <div class="form-group col-sm-6">
+                                        <div class="form-group col-sm-6" required="required">
                                           <label>Confirmar Senha: </label>
-                                          <input name="" type="text" class="form-control" placeholder="Confirmar Senha">
+                                          <input name="" type="password" class="form-control" placeholder="Confirmar Senha" pattern=".{8,}" title="No mínimo 8 caracteres">
                                         </div>
                                     </form>
                                 </div>                                   
@@ -225,7 +225,7 @@
                                       </div>
 
                                       <div class="form-group col-sm-8">                                                                            
-                                        <input name="" type="text" class="form-control" placeholder="Descreva o que deseja buscar">
+                                        <input name="" type="search" class="form-control" placeholder="Descreva o que deseja buscar">
                                       </div>
 
                                       <div class="form-group col-sm-2">                                       
@@ -282,22 +282,22 @@
 
                                         <div class="form-group col-sm-7">
                                           <label>Nome:</label>
-                                          <input name="nome" type="text" class="form-control" placeholder="Nome Completo">
+                                          <input name="nome" type="text" class="form-control" placeholder="Nome Completo" pattern="[a-zA-Z\s]+$" required autofocus>
                                         </div>
 
                                         <div class="form-group col-sm-5">
                                           <label>Usuário:</label>
-                                          <input name="nome" type="text" class="form-control" placeholder="Usuário">
+                                          <input name="nome" type="text" class="form-control" placeholder="Usuário" required>
                                         </div>
 
                                         <div class="form-group col-sm-6">
                                           <label>E-mail:</label>
-                                          <input name="" type="text" class="form-control" placeholder="E-mail">
+                                          <input name="" type="email" class="form-control" placeholder="E-mail" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
                                         </div>
 
                                         <div class="form-group col-sm-6">
                                           <label>Perfil:</label>
-                                          <select name="" class="form-control mr-sm-2">
+                                          <select name="perfil" class="form-control mr-sm-2" required="required">
                                             <option>Médico</option>
                                             <option>Enfermeiro</option>
                                             <option>Téc. Enfermagem</option>
@@ -305,14 +305,14 @@
                                           </select>
                                         </div>                                    
 
-                                        <div class="form-group col-sm-6">
+                                        <div class="form-group col-sm-6" required="required">
                                           <label>Senha:</label>
-                                          <input name="" type="text" class="form-control" placeholder="Senha">
+                                          <input name="" type="password" class="form-control" placeholder="Senha" pattern=".{8,}" title="No mínimo 8 caracteres">
                                         </div>
 
-                                        <div class="form-group col-sm-6">
+                                        <div class="form-group col-sm-6" required="required">
                                           <label>Confirmar Senha: </label>
-                                          <input name="" type="text" class="form-control" placeholder="Confirmar Senha">
+                                          <input name="" type="password" class="form-control" placeholder="Confirmar Senha" pattern=".{8,}" title="No mínimo 8 caracteres">
                                         </div>
                                     </form>
 
