--- a/pages/medicamento.html
+++ b/pages/medicamento.html
@@ -187,6 +187,11 @@
                                       <input name="" type="text" class="form-control" placeholder="Laboratório">
                                     </div>
 
+                                    <div class="form-group col-sm-6">
+                                      <label>Quantidade: </label><br>
+                                      <input name="" type="number" class="form-control" placeholder="Quantidade">
+                                  </div>
+
                   	              	<div class="form-group col-sm-6">
                                       <label>Tarja:</label>
                                       <select name="" class="form-control mr-sm-2">
