--- a/pages/maqueiro.html
+++ b/pages/maqueiro.html
@@ -175,7 +175,7 @@
 
                                             <div class="form-group col-sm-4">
                                               <label>Celular:</label>
-                          		                <input name="" type="tel" class="form-control" placeholder="Digite seu número de celular" id="celular">
+                          		                <input name="" type="tel" class="form-control" placeholder="Digite seu número de celular" id="celular" pattern="\([0-9]{2}\) [0-9]{4,6}-[0-9]{3,4}$">
                                             </div>
 
                                             <div class="form-group col-sm-4">
